bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value R
while (estSurMessage()) {if (litMessage()==R) {droite();avance();}} 
                                           ^